--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,8 +9,8 @@
   <link rel="icon" href="/favicon.ico" type="image/x-icon">
   <meta http-equiv="Description" name="Description" content="Tutorials, guides, FAQs for RubyGems package management" />
   <meta http-equiv="Keywords" name="Keywords" content="rubygems, gems, programming, ruby, packages" />
-  <link href="/stylesheets/screen.css" rel="stylesheet" type="text/css" />
-  <link href="/stylesheets/print.css" media="print" rel="stylesheet" type="text/css" />
+  <link href="/guides//stylesheets/screen.css" rel="stylesheet" type="text/css" />
+  <link href="/guides/stylesheets/print.css" media="print" rel="stylesheet" type="text/css" />
   <!--[if !IE]>-->
     <meta name="viewport" content="width=device-width">
     <script type="text/javascript">
@@ -52,7 +52,7 @@
 <script type="text/javascript">
 
   var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-10315684-2']);
+  _gaq.push(['_setAccount', 'UA-googles-2']);
   _gaq.push(['_trackPageview']);
 
   (function() {
