--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,9 +6,9 @@
   <![endif]-->
   <meta charset="utf-8" />
   <title>RubyGems Guides</title>
-  <link rel="icon" href="/favicon.ico" type="image/x-icon">
-  <link href="/stylesheets/screen.css" rel="stylesheet" type="text/css" />
-  <link href="/stylesheets/print.css" media="print" rel="stylesheet" type="text/css" />
+  <link rel="icon" href="/guides/favicon.ico" type="image/x-icon">
+  <link href="/guides/stylesheets/screen.css" rel="stylesheet" type="text/css" />
+  <link href="/guides/stylesheets/print.css" media="print" rel="stylesheet" type="text/css" />
   <meta http-equiv="Description" name="Description" content="Tutorials, guides, FAQs for RubyGems package management" />
   <meta http-equiv="Keywords" name="Keywords" content="rubygems, gems, programming, ruby, packages" />
 </head>
@@ -44,7 +44,7 @@
 <script type="text/javascript">
 
   var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-10315684-2']);
+  _gaq.push(['_setAccount', 'UA-GOOGLES-2']);
   _gaq.push(['_trackPageview']);
 
   (function() {
